# dify-helper

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md
bridge/: README.md  config.example.yaml  dify-bridge.service  install-systemd.sh  pyproject.toml
bridge/bridge/: __init__.py  app.py  auth.py  claude_cli_utils.py  config.py  event_store.py  models.py  session.py  session_manager.py  sqlite_store.py  task_queue.py  worker.py
bridge/bridge/migrations/: __init__.py  v1_initial.sql
bridge/tests/: test_phase2_isolation.py  test_phase3_oilmonkey_e2e.py  test_phase3_oilmonkey_race_fix.py  test_phase4_legacy_disabled.py
dify_plugin/: main.py  manifest.yaml  requirements.txt
docs/: CHANGELOG_diy_apps.md  DEBUG_DIFY_PATCH.md  agent-prompt-template.md  deployment.md  dify-debug-trace.log.md  dify-local-schema-reference.md  dochub-lan-download-guide.md
mcp_server/: .env.example  README.md  pyproject.toml
mcp_server/mcp_server/: __init__.py  dify_client.py  server.py
memory/: MEMORY.md  bridge-multi-user-isolation.md  dify-agent-chat-minimax-workflow-tool-not-called.md  dify-assigner-items-input-type-required.md  dify-break-conditions-jinja-no-fallback.md  dify-code-language-python-must-be-python3.md  dify-code-node-intro-text-wrong-ref.md  dify-code-node-os-environ-blocked.md  dify-code-node-outputs-require-value-type.md  dify-code-node-split-outputs-for-accumulator.md  dify-conversation-variable-not-ui-editable.md  dify-defensive-node-must-be-in-loop.md  dify-dochub-base64-strict-decoder-length-93.md  dify-dochub-container-dns-not-loopback.md  (+30 more)
(+51 files in other folders)
