[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dify-mcp-server"
version = "0.1.0"
description = "MCP Server bridging Dify Console API for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dify Helper" }]
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
dify-mcp-server = "mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_server*"]
